WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
276717
A crash with multiple video tags that contains webm source
https://bugs.webkit.org/show_bug.cgi?id=276717
Summary
A crash with multiple video tags that contains webm source
Dmitry Vakhnenko
Reported
2024-07-17 07:53:23 PDT
Created
attachment 471904
[details]
Crush demo For some reason a tab with multiple <video> tags crashes if it has a <source> in webm format. We consistently catch this error on iPhone 12 only. On other devices we have not been able to catch this bug. I have prepared a minimal example html file on which we catch this behavior.
Attachments
Crush demo
(5.14 KB, text/html)
2024-07-17 07:53 PDT
,
Dmitry Vakhnenko
no flags
Details
View All
Add attachment
proposed patch, testcase, etc.
Dmitry Vakhnenko
Comment 1
2024-07-17 07:55:57 PDT
Hmm, on 13 iphone it crashes too iOS 17.5.1
Alexey Proskuryakov
Comment 2
2024-07-17 17:43:07 PDT
Thank you for the report! Perhaps it is just running out of memory? When opening on a Mac, I see the videos resize to become pretty huge. Could you please see if there is a crash log stored? I don't have the configuration to quickly try it myself.
Radar WebKit Bug Importer
Comment 3
2024-07-24 07:54:42 PDT
<
rdar://problem/132405520
>
Jean-Yves Avenard [:jya]
Comment 4
2024-07-25 23:42:07 PDT
In this page we have videos with posters and have preload="metadata". The webm player doesn't respect the preload="metadata" and so will download all the videos immediately. They aren't particularly big here, 11.27MB, 74MB, 23MB, 5.6MB, 5.7MB and 11.8MB I haven't been able to reproduce on an iPhone running 21F90 (17.5.1) it takes forever to load but it doesn't crash. Dmitry, can you make it crash with the test file attached on an iPhone 12 or 13? is is the attached example just to show what your page typically looks like and there could be much more videos present ? A workaround for now would be to change ``` <video preload="metadata" class="videoPlayer" poster="
https://optim.tildacdn.net/tild3162-3030-4635-b934-393766343537/-/format/webp/mike.png
" > <source src="
https://practicum-content.s3.us-west-1.amazonaws.com/usa-main/guidance/Tutors/2022_11_03_Videos%20of%20guidance%20team_Mike%20Lee.webm
" type="video/webm" /> <source src="
https://practicum-content.s3.us-west-1.amazonaws.com/us-videos/2022_11_03_Videos%20of%20guidance%20team_Mike%20Lee.mp4
" type="video/mp4" /> </video> ``` into: <video preload="metadata" class="videoPlayer" poster="
https://optim.tildacdn.net/tild3162-3030-4635-b934-393766343537/-/format/webp/mike.png
" > <source src="
https://practicum-content.s3.us-west-1.amazonaws.com/us-videos/2022_11_03_Videos%20of%20guidance%20team_Mike%20Lee.mp4
" type="video/mp4" /> <source src="
https://practicum-content.s3.us-west-1.amazonaws.com/usa-main/guidance/Tutors/2022_11_03_Videos%20of%20guidance%20team_Mike%20Lee.webm
" type="video/webm" /> </video> ``` place the mp4 file first in your list instead of the webm. It will reduce much the networking usage.
Jean-Yves Avenard [:jya]
Comment 5
2024-07-29 08:56:08 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/31396
EWS
Comment 6
2024-07-30 01:51:17 PDT
Committed
281554@main
(75467caf79bb): <
https://commits.webkit.org/281554@main
> Reviewed commits have been landed. Closing PR #31396 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug