Source/WebCore/platform/graphics/WebMResourceClient.cpp
@@ -60,6 +60,14 @@ void WebMResourceClient::stop()
     resource->shutdown();
 }
 
+void WebMResourceClient::responseReceived(PlatformMediaResource&, const ResourceResponse& response, CompletionHandler<void(ShouldContinuePolicyCheck)>&& completionHandler)
+{
+    RefPtr parent = m_parent.get();
+    if (parent)
+        parent->dataLengthReceived(response.expectedContentLength());
+    completionHandler(parent ? ShouldContinuePolicyCheck::Yes : ShouldContinuePolicyCheck::No);
+}
+
 void WebMResourceClient::dataReceived(PlatformMediaResource&, const SharedBuffer& buffer)
 {
     if (RefPtr parent = m_parent.get())
